test/compile_errors/err_keyword_as_var_await.w
//! expect-check-fail: expected identifier
let await = 42
fn main:
    let x = 1
